--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -103,12 +103,12 @@
  静态优先，然后是父类型优先
 
 ```java
-// 1、父亲的静态属性 (1)
-// 2、子类的静态属性 (1)
-// 3、初始化父亲中的属性
-// 4、构造父亲实例
-// 5、初始化子类中的属性
-// 6、构造子类实例
+// 1、父亲的静态成员变量，包括静态变量和静态代码块
+// 2、子类的静态成员变量
+// 3、父亲的普通成员变量，包括普通成员和代码块
+// 4、父类的构造函数
+// 5、子类的普通成员变量
+// 6、子类的构造函数
 ```
 
 
@@ -1106,9 +1106,7 @@ public class DoubleLinkedListDemo {
 
 ## 1.1 map和set
 
-~~~java
-见上面经验总结第18点
-~~~
+
 
 
 
@@ -2304,40 +2302,71 @@ public class Sender {
 
 # 🎈🎈多线程
 
-## 1、线程、进程概念
+## 1、线程、进程
 
-- **Process 进程**：就是一个应用程序在运行期间，它所申请的资源（硬件、软件）的总和，它即是内存中划定的一块区域，而且是当前应用程序所“独占”的,是系统进行资源分配和调度的基本单位
+### 1.1 概念
 
-  - 当一个应用程序功能足够复杂的时候，它可能会由多个进程组成，每一个进程都会承担或者提供相应的某一项功能
+说到多线程，我们首先要了解下线程和进程
 
-  
+- **Process 进程**：一个在内存中运行的应用程序。每个进程都有自己独立的一块内存空间，一个进程可以有多个线程
+- **Thread 线程**：就是进程中的一个独立控制单元，线程在控制着进程的执行。因为系统产生一个线程或是在各个线程之间作切换工作时，负担要比进程小得多，也正因为如此，我们也叫它“轻量级线程”。
 
-- **Thread 线程**：“是一个轻量级的进程”，一个进程是由多个线程组成的，同时，线程又是CPU的最基本的调度单位
+> 说完概念，我就想到两者的区别（学校考试考过几次这种概念）进程是系统资源分配的基本单位，线程是cpu调度和分配的基本单位
 
 
 
-- CPU相关概念：
-  - 某一个线程如果想要计算，必须首先要争抢到CPU的时间片（是一个非常小的，几乎不可以再切割的时间单位），才有机会让CPU来计算程序中指定的逻辑
-  -  我们的操作系统可以同时运行多个应用程序，这些程序是由多个进程组成的，同时每一个进程又包含了多个线程，因此，有一个权力非常大的对象“调度器”，
-  - 由调度器来决定什么时间，哪个线程来执行CPU的运算
+
+- **问题**：分析完区别，就有一个疑问了，多线程为了什么，是为了充分利用cpu执行任务吗？
+
+对啊，重点来了，**线程是cpu调度和分配的基本单位**，追根到底，为了更好的利用cpu的资源，我们就要使用多线程来加快完成任务，如果只有一个线程，则第二个任务必须等到第一个任务结束后才能进行，如果使用多线程则在主线程执行任务的同时可以执行其他任务，而不需要等待。
+
+### 1.2 生命周期
+
+接着上面说，执行任务，什么时候算任务开始执行，啥时候算任务执行完毕，释放资源给下一个任务，就牵扯到了线程的生命周期问题
+
+- 线程的生命周期
+
+  - 创建 ：从新建一个线程对象到程序start() 这个线程之间的状态，都是新建状态
+
+  - 就绪 ：线程对象调用start()方法后，就处于就绪状态，等到JVM里的线程调度器的调度
+  - 运行 ：就绪状态下的线程在获取CPU资源后就可以执行run(),此时的线程便处于运行状态
+  - 阻塞：在一个线程执行了sleep（睡眠）、suspend（挂起）等方法后会失去所占有的资源，从而进入阻塞状态，在睡眠结束后可重新进入就绪状态
+  - 终止（死亡） ：run（）方法完成后或发生其他终止条件时就会切换到终止状态。
 
 
 
 ## 2、创建线程
 
-创建线程有多种方式：
+线程的知识了解后，忍不住开始使用他了，这也是重点，
+
+question：面试时多线程第一个问题就是这个，你说一说线程的创建方式
+
+- 常见方式：**继承Thread类，实现Runnable接口，通过Callable和Future创建线程**
+
+​		扩充：**匿名内部类，CompletableFuture，线程池**
+
+- 先上**总结**
+
+| 创建方式                     | 区别                                                         |
+| ---------------------------- | ------------------------------------------------------------ |
+| 继承Thread类                 | 重写run方法，通过start启动线程(因为Java是单根继承结构，所以一个类是线程类，就不能是其它类型的子类型了，有局限性) |
+| 实现Runnable接口             | 实现run方法，通过start启动线程（因为Task类只需要实现接口，所以它可以是其它类的子类型，更灵活） |
+| 通过Callable和Future创建线程 | 跟Runable相比，有返回值，而且Callable有异常处理，并且获取异常 |
+| 匿名内部类                   | 更加灵活，可以不用再刻意的新建一个类，它的唯一的确定，就是别人无法重用（它没有名称） |
+| 线程池                       | 原始的线程创建方式会频繁的创建销毁线程，耗费资源，线程池给你创建出来统一管理，提高响应速度，任务不需要等待，即到即用 |
+| CompletableFuture（JDK8）    | xxxxAsync()方法表示异步（Async：异步），在线程池中执行，实现了Future接口（可以获得返回值），并在此基础上进行了扩展，实现了对任务编排的能力 |
+
+
+
+下面简单介绍下（好像全是代码🤬，懂创建就没必要看代码（删掉都行），看区别，面试的时候就可以说说区别）
 
 ### 2.1 编写Thread的子类
 
-重写run方法，通过start启动线程(因为Java是单根继承结构，所以一个类是线程类，就不能是其它类型的子类型了，有局限性)
-
 ~~~java
-  // 编写一个线程类的子类
-  class MyThread extends Thread {
-  
-  
+// 编写一个线程类的子类
+  class MyThread extends Thread {  
       @Override
-      public void run() { // 状态3：运行状态
+      public void run() {
           RandomUtils.longSleep(3000, 5000);
           // 获取到当前的线程对象
           Thread thread = Thread.currentThread();
@@ -2346,20 +2375,14 @@ public class Sender {
           int priority = thread.getPriority(); // 线程的优先级
           System.out.println(name + ":" + id + ":" + priority);
           System.out.println(thread.getId() + "执行完毕");
-  
-      }  // 状态4：终止状态
+      }
   }
 ~~~
 
-  
-
-### 2.2 编写一个类实现Runnable接口
-
-实现run方法，通过start启动线程（因为Task类只需要实现接口，所以它可以是其它类的子类型，更灵活）
+### 2.2 编写类实现Runnable接口
 
 ~~~java
 class Task implements Runnable {
-
     @Override
     public void run() {
         RandomUtils.longSleep(3000, 5000);
@@ -2372,31 +2395,53 @@ class Task implements Runnable {
         System.out.println(thread.getId() + "执行完毕");
     }
 }
-
 ~~~
 
-
-
-### 2.3 内部类
-
-更加灵活，可以不用再刻意的新建一个类，它的唯一的确定，就是别人无法重用（它没有名称）
+### 2.3 通过Callable和Future创建线程
 
 ~~~java
-    private static void multiThreadDemo() {
+public class CallableFutrueTest {
+    public static void main(String[] args) {
+        CallableTest ct = new CallableTest();                        
+        FutureTask<Integer> ft = new FutureTask<Integer>(ct);//使用FutureTask包装CallableTest对象
+        for(int i = 0; i < 100; i++){
+            System.out.println(Thread.currentThread().getName() + "主线程的i为：" + i);
+            //当主线程执行第30次之后开启子线程
+            if(i == 30){
+                Thread td = new Thread(ft,"子线程");
+                td.start();
+            }
+        }     
+        try { //获取并输出子线程call()方法的返回值
+            System.out.println("子线程的返回值为" + ft.get());
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } catch (ExecutionException e) {
+            e.printStackTrace();
+        }
+    }
+}
+class CallableTest implements Callable<Integer>{
+    //复写call() 方法，call()方法具有返回值
+    public Integer call() throws Exception {
+        int i = 0;
+        for( ; i<100; i++){
+            System.out.println(Thread.currentThread().getName() + "的变量值为：" + i);
+        }
+        return i;
+    }
+}
+~~~
 
+### 2.4 匿名内部类
+
+~~~java
+private static void multiThreadDemo() {
         // 打印当前主线程的信息
         Thread main = Thread.currentThread (); // 可以理解为主线程
         System.out.println(main.getId() + ":" + main.getName());
-
         // 实例化一个线程对象
         for (int i = 0; i < 3; i++) { // 创建3个子线程
-            // Thread t = new MyThread(); // 状态1：进入new初始化状态 马上会进入状态2：就绪状态（阻塞状态）
-            // 启动这个线程
-            // t.start();
-
-            // Thread t = new Thread(new Task());
-            // t.start();
-
             Thread t = new Thread(() -> { // 匿名内部类 - 简化为lambda表达式
                 RandomUtils.longSleep(3000, 5000);
                 // 获取到当前的线程对象
@@ -2409,101 +2454,153 @@ class Task implements Runnable {
             });
             t.start();
         }
-
         System.out.println("-----------------------------");
     }
 ~~~
 
+## 3、线程池
 
+这个听起来就高大尚，拿出来单独讲吧
 
-## 3、线程竞争资源
+- **线程池创建方式**
+  - 使用 Executors 执行器自动创建线程池
+  - 手动使用 ThreadPoolExecutor 创建线程池（这个被面试官问到了参数）
 
-- 定义一个类，代表容器，也表示线程抢占的资源
+### 3.1 Executors 执行器自动创建线程池
+
+有六种🤣介绍几个你常用的就行
+
+老规矩先上**总结**
+
+省略Executors.
+
+| 线程池                           | 特点                                                         |
+| -------------------------------- | ------------------------------------------------------------ |
+| newFixedThreadPool               | 创建⼀个固定⼤⼩的线程池，可控制并发的线程数，超出的线程会在队列中等待 |
+| newCachedThreadPool              | 创建⼀个可缓存的线程池，若线程数超过处理所需，缓存⼀段时间后会回收，若线程数不够，则新建线程 |
+| newSingleThreadExecutor          | 创建单个线程数的线程池，它可以保证先进先出的执⾏顺序         |
+| newScheduledThreadPool           | 创建⼀个可以执⾏延迟任务的线程池                             |
+| newSingleThreadScheduledExecutor | 创建⼀个单线程的可以执⾏延迟任务的线程池                     |
+| newWorkStealingPool（JDK8）      | 创建⼀个抢占式执⾏的线程池（任务执⾏顺序不确定）             |
+
+有兴趣可以看看下面介绍下上课用过的几种
+
+#### 3.1.1 固定数量线程池FixedThreadPool
+
+创建一个有固定线程数量的线程池 N-1 模式 个别组件会用N + 1,非常适合保守的来限定对于服务器CPU资源的使用
 
 ~~~java
-public class Container {
-
-    private final List<String> list = new ArrayList<>();
-
-    public void increment(String item) {
-        list.add(item);
-    }
-
-    public void showAll() {
-        System.out.println(list);
-    }
-
-}
-~~~
-
-- 创建线程，通过实现接口
-
-~~~java
-public class Dude implements Runnable {// 家伙 brother guy
-
-    private final String name;
-    private final Container container;
-
-    public Dude(String name, Container container){
-        this.name = name;
-        this.container = container;
-    }
-
-
-    @Override
-    public void run() {
+ public static void main(String[] args) {
+        ExecutorService pool = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() - 1);
+        // 请考虑如下这种情况：前面3个任务的执行时间非常长，而后面提交的2个任务会有一个等待期
         for (int i = 0; i < 100; i++) {
-            container.increment(name);
+            pool.submit(() -> { // 开发人员不需要自己来创建线程对象，而是把关注点放在run，也就是具体的业务逻辑
+                RandomUtils.longSleep(1000, 5000);
+                System.out.println(Thread.currentThread().getName());
+            });
         }
+        pool.shutdown(); // 类似于各种join，即是会等到所有提交的任务执行完毕以后，再关闭pool
     }
-
-}
 ~~~
 
-- 程序入口
+#### 3.1.2 懒汉模式线程池CachedThreadPool
 
-  因为t1.start()为非阻塞性方法，所以不会等t1执行完后再执行t2.start()
+- 懒汉
+  一开始，pool的size为0，随着提交任务的增多，它会不断创建新的线程实例，随着时间的推进，有的任务很快就执行完了，线程对象会有部分闲置，因此它们会被pool销毁(回收)，实现pool的size出现弹性增长和收缩
+- 适用于提交请求的频率不是特别快，也不是特别多的场景
 
-~~~java
+```java
 public class Main {
     public static void main(String[] args) {
-        // 容器只有一个
-        Container container = new Container();
-        // 但是它要同时被两个任务类使用
-        Thread t1 = new Thread(new Dude("Jack", container));
-        Thread t2 = new Thread(new Dude("Mike", container));
-
-        t1.start();
-        t2.start();
-
-        while (t1.isAlive() || t2.isAlive()) {
+        ExecutorService pool = Executors.newCachedThreadPool();      
+        for (int i = 0; i < 100; i++) {
+            pool.submit(() -> { 
+                RandomUtils.longSleep(1000, 5000);
+                System.out.println(Thread.currentThread().getName());
+            });
         }
+        pool.shutdown(); // 会等到所有提交的任务提交以后，再关闭pool
+        // pool.shutdownNow();
+        // shutdown以后，不可以再提交新的任务了
+    }
+}
+```
 
-        // 程序执行到这里，证明t1和t2都不是活跃的
-        container.showAll();
+#### 3.1.3 定时任务ScheduledThreadPool
+
+- **scheduleAtFixedRate**：保障2个任务的开始时间间隔为1s，但是如果有一个任务的执行时间超出1s，那么下一个任务的开始时间将会延迟到上一个任务结束
+
+```java
+public class ScheduleMain {
+    public static void main(String[] args) {
+        int poolSize = Runtime.getRuntime().availableProcessors() - 1;
+        ScheduledExecutorService pool = Executors.newScheduledThreadPool(poolSize);
+        
+        //参数1表示Runable，重写方法，参数2表示第一个开始等待时间，参数3表示2个任务的开始时间间隔，参数4表示时间单位
+        
+        pool.scheduleAtFixedRate(
+                () -> {
+                    System.out.println(">>>" + Thread.currentThread().getName());
+                    RandomUtils.longSleep(3000, 5000);
+                    System.out.println("<<<" + Thread.currentThread().getName());
+                }, // 任务并非是马上提交
+                3,
+                6,
+                TimeUnit.SECONDS
+        );      
+```
+
+- **scheduleWithFixedDelay**: 严格保障上一个任务结束和下一个任务开始之间的间隔一定是1s
+
+~~~java
+public static void main(String[] args) {
+    
+    //参数1表示第一个参数表示Runable，重写方法，参数2表示第一个开始等待时间，参数3表示上一个任务结束和下一个任务开始之间的间隔，参数4表示时间单位
+    
+				pool.scheduleWithFixedDelay(() -> {
+                    System.out.println(">>>" + Thread.currentThread().getName());
+                    RandomUtils.longSleep(3000, 5000);
+                    System.out.println("<<<" + Thread.currentThread().getName());
+                }, // 任务并非是马上提交
+                3,
+                1,
+                TimeUnit.SECONDS);
+        RandomUtils.longSleep(60000);
+        pool.shutdown();
     }
 }
 ~~~
 
+### 3.2  ThreadPoolExecutor 手动创建线程池
+
+面试官一听我说完线程池，就问我你用过线程池的哪些参数，估计是想摸底下我平常学习的深度
+
+| 参数                     | 介绍                                               |
+| ------------------------ | -------------------------------------------------- |
+| corePoolSize             | 核心线程池大小                                     |
+| maximumPoolSize          | 最大线程池大小                                     |
+| keepAliveTime            | 线程池中超过corePoolSize数目的空闲线程最大存活时间 |
+| workQueue                | 阻塞任务队列                                       |
+| threadFactory            | 新建线程工厂                                       |
+| RejectedExecutionHandler | 拒绝策略                                           |
+
+- corePoolSize，maximumPoolSize，workQueue之间关系
+
+上图上图
+
+![image-20220928204721573](images/image-20220928204721573.png)（**corePoolSize，maximumPoolSize，workQueue之间关系**)
+
+这三个参数可以拿出来对着图讲一讲，如果线程池线程数小于核心线程池大小，那么提交新任务时会创建一个新线程去执行，即使有空闲线程，当线程数达到核心线程池大小时，新任务会被放入阻塞队列，等待调度，如果阻塞队列满了，而且最大线程池大小比核心线程池大小大，新提交任务就会创建新线程执行任务，再增加任务提交数量，超过最大线程数，新提交的任务被拒绝策略处理
 
 
-## 4、API
 
-### 4.1 while{}
+## 4、线程API
 
-~~~java
-        Thread t = new Thread(new Task());
-        t.start(); // 非阻塞性方法
-        System.out.println("主线程执行完毕");
-       while (t.isAlive()) {
-             ;
-         }
-        System.out.println("子线程执行完毕");
-~~~
+当你细心看完线程的创建后，说明你是一个有耐心的人，这么多也能看下去，相信你也能很好地讲出来，延长面试时间
 
+回顾线程初衷，是为了充分利用cpu执行任务，但线程是有限的，因此我们要合理使用，防止OOM，因此可以用API来对线程的生命周期进行管理 
 
-
-### 4.2 join()-等待当前线程死亡
+### 4.1 join()-等待当前线程死亡
 
 等待当前这个t线程死亡：如果t没有执行完毕，程序的执行流就会一直阻塞在这一行
 
@@ -2511,15 +2608,11 @@ public class Main {
         Thread t = new Thread(new Task());
         t.start(); // 非阻塞性方法
         System.out.println("主线程执行完毕");
-
         t.join(); //等待当前这个t线程死亡：如果t没有执行完毕，程序的执行流就会一直阻塞在这一行
-
         System.out.println("子线程执行完毕");
 ~~~
 
-
-
-### 4.3 interrupt()-中断
+### 4.2 interrupt()-中断
 
 - `interrupt()`并不会强制中断线程，它只是发出一个中断请求，由被中断线程来决定是否应该中断。
 - 被中断线程需要持续检查是否收到中断请求，编写相应逻辑进行中断。
@@ -2538,8 +2631,6 @@ public class InterruptMain {
         System.out.println("发出中断指令");
         t.interrupt(); // 不是强制性的，只是向子线程发出了一个中断信号
     }
-
-
 private static class Task implements Runnable {
         @Override
         public void run() {
@@ -2553,7 +2644,6 @@ private static class Task implements Runnable {
             return Thread.currentThread().isInterrupted(); // 当前线程是否被打了中断的标记
         }
     }
-
 ~~~
 
  
@@ -3177,182 +3267,7 @@ public class Demo {
 }
 ```
 
-## 8、线程池的创建
 
-### 8.1 固定数量线程池FixedThreadPool
-
-~~~java
- public static void main(String[] args) {
-        // 创建一个有固定线程数量的线程池 N-1 模式 个别组件会用N + 1
-        // 非常适合保守的来限定对于服务器CPU资源的使用
-        ExecutorService pool = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() - 1);
-        // 请考虑如下这种情况：前面3个任务的执行时间非常长，而后面提交的2个任务会有一个等待期
-        for (int i = 0; i < 100; i++) {
-            pool.submit(() -> { // 开发人员不需要自己来创建线程对象，而是把关注点放在run，也就是具体的业务逻辑
-                RandomUtils.longSleep(1000, 5000);
-                System.out.println(Thread.currentThread().getName());
-            });
-        }
-        pool.shutdown(); // 类似于各种join，即是会等到所有提交的任务执行完毕以后，再关闭pool
-        // pool.shutdownNow();
-        // shutdown以后，不可以再提交新的任务了
-    }
-~~~
-
-
-
-### 8.2 懒汉模式线程池CachedThreadPool
-
-- 懒汉
-  一开始，pool的size为0，随着提交任务的增多，它会不断创建新的线程实例，随着时间的推进，有的任务很快就执行完了，线程对象会有部分闲置，因此它们会被pool销毁(回收)，实现pool的size出现弹性增长和收缩
-- 适用于提交请求的频率不是特别快，也不是特别多的场景
-
-```java
-public class Main {
-    public static void main(String[] args) {
-        ExecutorService pool = Executors.newCachedThreadPool();      
-        for (int i = 0; i < 100; i++) {
-            pool.submit(() -> { 
-                RandomUtils.longSleep(1000, 5000);
-                System.out.println(Thread.currentThread().getName());
-            });
-        }
-        pool.shutdown(); // 类似于各种join，即是会等到所有提交的任务执行完毕以后，再关闭pool
-        // pool.shutdownNow();
-
-        // shutdown以后，不可以再提交新的任务了
-    }
-}
-```
-
-## 9、schedule定时任务
-
-### 9.1 scheduleAtFixedRate
-
-- scheduleAtFixedRate:保障2个任务的开始时间间隔为1s，但是如果有一个任务的执行时间超出1s，那么下一个任务的开始时间将会延迟到上一个任务结束。
-- 参数
-  - 参数1表示Runable，重写方法
-  - 参数2表示第一个开始等待时间
-  - 参数3表示2个任务的开始时间间隔
-  - 参数4表示时间单位
-
-```java
-public class ScheduleMain {
-    // 定时任务
-    public static void main(String[] args) {
-        int poolSize = Runtime.getRuntime().availableProcessors() - 1;
-        ScheduledExecutorService pool = Executors.newScheduledThreadPool(poolSize);
-
-        // pool.schedule(
-        //         () -> System.out.println(Thread.currentThread().getName()),
-        //         3, // 表示提交任务以后，隔多久才执行
-        //         TimeUnit.SECONDS
-        // );
-        // 在delay时间过后，按照period的频率执行已经提交的任务
-        // 保障上一个任务的开始与下一个任务的开始之间的间隔为1s
-        pool.scheduleAtFixedRate(
-                () -> {
-                    System.out.println(">>>" + Thread.currentThread().getName());
-                    RandomUtils.longSleep(3000, 5000);
-                    System.out.println("<<<" + Thread.currentThread().getName());
-                }, // 任务并非是马上提交
-                3,
-                6,
-                TimeUnit.SECONDS
-        );
-
-       
-```
-
-### 9.2 scheduleWithFixedDelay
-
-- scheduleWithFixedDelay: 严格保障上一个任务结束和下一个任务开始之间的间隔一定是1s
-- 参数
-  - 参数1表示第一个参数表示Runable，重写方法
-  - 参数2表示第一个开始等待时间
-  - 参数3表示上一个任务结束和下一个任务开始之间的间隔
-  - 参数4表示时间单位
-
-~~~java
-public static void main(String[] args) {
-				pool.scheduleWithFixedDelay(() -> {
-                    System.out.println(">>>" + Thread.currentThread().getName());
-                    RandomUtils.longSleep(3000, 5000);
-                    System.out.println("<<<" + Thread.currentThread().getName());
-                }, // 任务并非是马上提交
-                3,
-                1,
-                TimeUnit.SECONDS);
-
-        RandomUtils.longSleep(60000);
-        pool.shutdown();
-
-    }
-
-}
-~~~
-
-
-
-
-
-## 10、集合用法
-
-- int[] 长度固定，类型限定的
-
-- List
-
-  ArrayList 线程不安全，因为它的修改方法并没有“同步化”，同步化就是使用锁的机制保障对应的逻辑“原子化”，这些被原子化的逻辑是连贯执行的
-  也就是说一个线程在执行这些代码片段的时候，其它线程都阻塞在外面，等待它们全部完成，才能进来执行
-
-  CopyOnWriteArrayList
-
-- Map
-
-​       HashMap 不重复，需要根据某一个别名、标识找到某一个
-
-​       ConcurrentHashMap
-
-- Set
-
-​       HashSet : 不重复，只需要盛放，不需要找某一个
-​       ConcurrentSkipListSet
-
-## 11、Future、Callable
-
-### 11.1 Future和Callable
-
-- `Callable`接口来提交有返回值的任务，得到`Feature`作为结果
-
-- pool.submit用的是Callable而不是Runable，因为Runable没有返回值
-- **future.get()等方法是阻塞性方法**
-
-~~~java
- public static void main(String[] args) throws ExecutionException, InterruptedException {
-        ExecutorService pool = null;
-        try {
-            pool = Executors.newFixedThreadPool(3);
-            // submit方法：提交一个有返回值的任务，它会立即返回一个包装了一个在未来某一个时间点会得到结果的对象
-            // future相当于我们以后获取结果的一个句柄
-            Future<String> future = pool.submit(
-                    () -> {
-                        RandomUtils.longSleep(3000, 5000);
-                        return RandomUtils.randomString(); // x
-                    }
-            );
-            System.out.println(0);
-
-            String msg = future.get();// 会得到x处所return的值，这个get方法是阻塞性，阻塞的时间取决于任务实际执行的时间
-
-            System.out.println(msg);
-        } finally {
-            if (pool != null)
-                pool.shutdown();
-        }
-
-        // pool.submit(new MyCall());
-    }
-~~~
 
 
 
@@ -3437,150 +3352,6 @@ public static void main(String[] args) {
 
 
 
-
-## 12、异步线程
-
-### 12.1 CompletableFuture.runAsync
-
-#### 12.1.1 以异步的方式提交一个没有返回值的任务
-
-```java
-CompletableFuture.runAsync(() -> {
-    RandomUtils.longSleep(3000, 5000);
-    System.out.println(RandomUtils.randomString());
-});
-System.out.println("提交任务以后主线程后续的逻辑");
-```
-
-#### 12.1.2 按照线程执行顺序实现
-
-```java
-List<String> list = new ArrayList<>();
-CompletableFuture<Void> future1 = CompletableFuture.runAsync(() -> {
-    System.out.println("start1");
-    list.add("A");
-    System.out.println("end1");
-});
-System.out.println("任务1提交完毕");
-CompletableFuture<Void> future2 = future1.thenRunAsync(() -> {
-    System.out.println("start2");
-    list.add("B");
-    System.out.println("end2");
-});
-System.out.println("任务2提交完毕");
-future2.thenRunAsync(() -> {
-    System.out.println("start3");
-    list.add("C");
-    System.out.println("end3");
-});
-System.out.println("任务3提交完毕");
-```
-
-#### 12.1.3 严格保障任务一结束后才能开始任务二
-
-```java
-CompletableFuture.runAsync(() -> list.add("a"))
-        .thenRunAsync(() -> list.add("b"))
-        .thenRunAsync(() -> list.add("c"));
-
-RandomUtils.longSleep(200);
-System.out.println(list);
-```
-
-#### 12.1.4 无返回值的多任务并行
-
-
-```
-public static void test2() { // 无返回值的多任务并行
-    // 并行的提交多个有可能耗费时间的任务
-    // 最终在所有的任务完成之后，再执行后续的指定逻辑
-
-    CompletableFuture<Void> f1 = CompletableFuture.runAsync(() -> {
-        RandomUtils.longSleep(3000, 5000);
-        System.out.println(RandomUtils.randomString());
-    });
-    CompletableFuture<Void> f2 = CompletableFuture.runAsync(() -> {
-        RandomUtils.longSleep(3000, 5000);
-        System.out.println(RandomUtils.randomString());
-    });
-    CompletableFuture<Void> f3 = CompletableFuture.runAsync(() -> {
-        RandomUtils.longSleep(3000, 5000);
-        System.out.println(RandomUtils.randomString());
-    });
-
-    CompletableFuture<Void> all = CompletableFuture.allOf(f1, f2, f3);
-    all.thenRun(() -> {
-        System.out.println("最后运行的");
-    });
-
-
-    RandomUtils.longSleep(5000);
-}
-```
-
-
-
-### 12.2 CompletableFuture.supplyAsync
-
-#### 12.2.1 以异步的方式提交一个有返回值的任务
-
-```java
-CompletableFuture<String> future = CompletableFuture.supplyAsync(() -> {
-    RandomUtils.longSleep(3000, 5000);
-    return RandomUtils.randomString();
-});
-System.out.println("提交任务以后主线程后续的逻辑");
-String msg = future.get();
-System.out.println(msg);
-```
-
-#### 12.2.2 有返回值的多任务并行
-
-~~~java
-  private static final Supplier<Integer> supplier = () -> {
-        RandomUtils.longSleep(3000, 5000);
-        int num = RandomUtils.randomNumber(100);
-        System.out.println(num);
-        return num;
-    };
-public static void test3() { // 有返回值的多任务并行
-        CompletableFuture<Integer> f1 = CompletableFuture.supplyAsync(supplier);
-        CompletableFuture<Integer> f2 = CompletableFuture.supplyAsync(supplier);
-        CompletableFuture<Integer> f3 = CompletableFuture.supplyAsync(supplier);
-
-        CompletableFuture<Void> all = CompletableFuture.allOf(f1, f2, f3);
-        all.thenRun(() -> {
-            try {
-                System.out.println(f1.get() + f2.get() + f3.get());
-            } catch (InterruptedException | ExecutionException e) {
-                throw new RuntimeException(e);
-            }
-            // System.out.println("最后运行的");
-        });
-
-        RandomUtils.longSleep(5000);
-    }
-~~~
-
-#### 12.2.3 超时不阻塞
-
-~~~java
- private static void test4() {
-        CompletableFuture<Integer> future = CompletableFuture.supplyAsync(() -> {
-            RandomUtils.longSleep(5000);
-            return RandomUtils.randomNumber(100);
-        });
-        System.out.println("任务提交完毕");
-        Integer num = null;
-        try {
-            num = future.get(3, TimeUnit.SECONDS);
-        } catch (Exception e) {
-            // 编写补偿逻辑
-            // 如果超时了，用户没必要继续等待，因为有可能确实没票了，应当立即告诉用户结果
-        }
-        System.out.println(num);
-    }
-~~~
 
 
 
@@ -4291,6 +4062,10 @@ select * from customers limit 0,3;
 
 ```
 
+### 1.6 distinct用法 查询一个字段不重复的记录
+
+### 1.7
+
 ## 2、多表查询
 
 ### 2.1 内连接
@@ -4320,7 +4095,7 @@ select e.employee_id,e.first_name,m.employee_id,m.first_name
 select o.order_id,o.order_date,c.first_name,c.last_name,os.name
 	from orders o
 	join customers c on o.customer_id = c.customer_id
-	join order_statuses os on o.status = os.order_status_id;
+	join order_statuses os on o.status = os.order_status_id;  
 	
 -- 练习 查询支付表，同时显示支付方式和客户信息
 
